# qnexus-mcp

./: .cz.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml  server.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: DESIGN.md  PUBLISHING.md  TROUBLESHOOTING.md
docs/research/: 02-security-and-authorization.md  04-qnexus-sdk-surface.md  05-user-onboarding-friction.md  README.md
scripts/: dev-wheel-to-windows.sh  post-flip-harden.sh
src/qnexus_mcp/: __init__.py  backends.py  cli.py  client.py  config.py  context.py  guards.py  permissions.py  polling.py  results.py  sanitize.py  server.py
src/qnexus_mcp/tools/: __init__.py  destructive.py  execute.py  manage.py  read.py
tests/: conftest.py  test_backends.py  test_cli.py  test_client.py  test_config.py  test_guards.py  test_permissions.py  test_polling.py  test_resilience.py  test_results.py  test_sanitize.py  test_server.py  test_server_json.py  test_smoke_import.py  test_tools_destructive.py  test_tools_execute.py  test_tools_manage.py  test_tools_read.py  test_toolsnap.py
tests/smoke/: test_live_readonly.py
tests/snapshots/: tool_catalog.json
